# free-fps

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
app/: LICENSE  README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/docs/: first_run_mac.MD  first_run_win.MD
app/scripts/: cargo-toml-updater.cjs
app/src/: App.vue  main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.microsoftstore.conf.json  tauri.windows.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/licenses/: FFMPEG_NOTICE.txt  LICENSE.txt
app/src-tauri/src/: errors.rs  lib.rs  main.rs
app/src-tauri/src/commands/: fftools.rs  license.rs  mod.rs  thumbnail.rs  video.rs
app/src-tauri/src/utils/: bins.rs  bundled_ffmpeg.rs  ffmpeg.rs  gpu.rs  logger.rs  mod.rs  proc.rs  rate_limiter.rs
app/src/api/: tauri.ts  toolsAPI.ts
app/src/components/: AppFooter.vue  FlyingBubble.vue  LogoHeader.vue  TitledHeader.vue
app/src/components/buttons/: BackButton.vue  CloseButton.vue  HelpButton.vue  HomeButton.vue  LangButton.vue  ResetSettingsButton.vue  SettingsButton.vue  ThemeButton.vue
app/src/components/dialogs/: FFFoundDialog.vue  FFFoundDialogProvider.vue  HelpDialog.vue
app/src/components/main/: PreviewNotAvailable.vue  Processing.vue  RescanFolderButton.vue  Setup.vue  VideoItem.vue
app/src/composables/: useFFToolsDialog.ts  useSettingsPersistence.ts  useVideoConversion.ts
app/src/i18n/: index.ts
app/src/i18n/locales/: by.ts  de.ts  en.ts  es.ts  fr.ts  it.ts  pl.ts  pt.ts  ru.ts  ua.ts
app/src/md/: by.MD  de.MD  en.MD  es.MD  fr.MD  it.MD  pl.MD  pt.MD  ru.MD  ua.MD
app/src/router/: index.ts  paths.ts
app/src/stores/: index.ts  persistentStore.ts  settingsStore.ts
app/src/themes/: index.ts
app/src/types/: index.ts
app/src/views/: MainView.vue  SettingsView.vue
docs/: _config.yml  index.html  robots.txt  script.js  sitemap.xml  styles.css
scripts/unix/: 25fps-silent-hq-same-folder.command  50fps-256kbps-hq-same-folder.command  50fps-silent-hq-same-folder.command  README.html  README.md  convert_fps.sh
scripts/win/: 25fps-silent-high-same-folder.bat  README.md  convert_fps.ps1  to25fpsAudio.bat  to50fps.bat
