[package]
name = "free-fps"
version = "0.1.0"
description = "Free FPS"
authors = ["you"]
edition = "2021"

[lib]
name = "free_fps_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-store = "2.0.0"
tauri-plugin-os = "2"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"

tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
futures = "0.3"

walkdir = "2"
regex = "1.12.2"
num_cpus = "1.17.0"
open = "5.3.2"

# Added for timestamp handling and metadata parsing
chrono = { version = "0.4.42", features = ["serde"] }
filetime = "0.2.26"
base64 = "0.22.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Windows-only dependency for setting file creation time
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"] }
