[package]
name = "free-fps"
version = "1.1.3"
description = "Free FPS"
authors = ["undelalune"]
license = "GPL-3-only"
edition = "2021"

[lib]
name = "free_fps_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-store = "2.4.1"
tauri-plugin-os = "2.3.2"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"

tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"

regex = "1.12.2"
num_cpus = "1.17.0"
open = "5.3.2"

chrono = { version = "0.4.42", features = ["serde"] }
filetime = "0.2.26"
base64 = "0.22.1"
libc = "0.2.177"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Foundation",
    "Storage",
    "Storage_FileProperties",
    "Storage_Streams",
    "Win32_System_WinRT",
    "Win32_Foundation",
] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }
